--- a/sass/abstracts/_tokens.scss
+++ b/sass/abstracts/_tokens.scss
@@ -90,8 +90,8 @@ $checkbox-color-secondary: $color-white;
 
 // Preferences bar component
 $preferences-bar-background-color: $color-background-muted;
-$preferences-bar-margin-top: 8vh;
-$preferences-bar-height: 6vh;
+$preferences-bar-margin-top: 12vh;
+$preferences-bar-height: 10vh;
 $preferences-bar-button-color: $color-gray-100;
 $preferences-bar-button-background-color: $color-gray-800;
 
