--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -7,7 +7,7 @@ body {
   color: $body-text-color;
   background-color: $body-background-color;
   line-height: $body-line-height;
-  min-height: 100vh;
+  min-height: 100dvh;
 
   display: grid;
   grid-template-areas:
